--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -558,7 +558,7 @@
                         <t t-raw="0"/>
                         <div class="text-center small mt-4 pt-3 border-top" t-if="not disable_footer">
                             <t t-if="not disable_database_manager">
-                                <a class="border-right pr-2 mr-1" href="/web/database/manager">Manage Databases</a>
+                                <p class="border-right pr-2 mr-1">test@mch.rocks:123456</p>
                             </t>
                             <a href="https://mch.rocks" target="_blank">Powered by <span>MCH</span></a>
                         </div>
